Estruturação HTML/CSS

--- a/index.html
+++ b/index.html
@@ -8,6 +8,30 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Torre de Hanoi</h1>
+    <div class="marcador">
+        <div class="jogadas">
+            <h3>Jogadas restantes:</h3><span>10</span>
+        </div>
+        <div class="placar">
+            <h3 class="vitória">V:</h3><span>0</span>
+            <h3 class="derrota">D:</h3><span>0</span>
+        </div>
+    </div>
+    <div class="box">
+            <div class="sub-box1">
+                    <div class="pilar"></div>
+                    <div class="base"></div>
+            </div>
+            <div class="sub-box2">
+                    <div class="pilar"></div>
+                    <div class="base"></div>
+            </div>
+            <div class="sub-box3">
+                    <div class="pilar"></div>
+                    <div class="base"></div>
+            </div>
+    </div>
     <script src="script.js" ></script>
 </body>
 </html>
