--- a/index.html
+++ b/index.html
@@ -18,19 +18,7 @@
             <h3 class="derrota">D:</h3><span>0</span>
         </div>
     </div>
-    <div class="box">
-            <div class="sub-box1">
-                    <div class="pilar"></div>
-                    <div class="base"></div>
-            </div>
-            <div class="sub-box2">
-                    <div class="pilar"></div>
-                    <div class="base"></div>
-            </div>
-            <div class="sub-box3">
-                    <div class="pilar"></div>
-                    <div class="base"></div>
-            </div>
+    <div id="box"></div>
     </div>
     <script src="script.js" ></script>
 </body>
