--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Torre de Hanoi</h1>
+    <div id="title"><img src="./img/titulo.png" alt="Torre de Hanoi"></div>
     <div class="marcador">
         <div class="jogadas">
             <h3>Jogadas restantes:</h3><span>10</span>
