--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div id="title"><img src="./img/titulo.png" alt="Torre de Hanoi"></div>
     <div class="marcador">
         <div class="jogadas">
-            <h3>Jogadas restantes:</h3><span>10</span>
+            <h3>Jogadas restantes:</h3><span id="rest"></span>
         </div>
         <div class="placar">
-            <h3 class="vitória">V:</h3><span>0</span>
-            <h3 class="derrota">D:</h3><span>0</span>
+            <h3>V:</h3><span id="victory"></span>
+            <h3>D:</h3><span id="defeat"></span>
         </div>
     </div>
     <div id="box"></div>
